Added: fast-dom promises and test

--- a/examples/index.html
+++ b/examples/index.html
@@ -12,6 +12,9 @@
 <div id="three"></div>	
 
 
-<script src="../dist/aventador.js"></script>
+<script src="../dist/aventador.umd.js"></script>
+<script>
+	console.log(fastdom)
+</script>
 </body>
 </html>
