--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
     <script src="setup.js"></script>
     <script src="/dist/aventador.umd.js"></script>
     <script src="element-methods.js"></script>
+    <script src="fastdom-methods.js"></script>
     <script>
     mocha.run();
     </script>
